--- a/main.css
+++ b/main.css
@@ -62,7 +62,7 @@ h1{
 }
 
 .menu a {
-    background: #004966;
+    background: #FEFEE2;
     color: #fff;
     display: inline;
     margin-left: 40px;
