--- a/main.css
+++ b/main.css
@@ -80,7 +80,7 @@ h1{
 #home{
     height: 100vh;
     width: 100%;
-    background-color: #004966;
+    background-color: #FEFEE2;
     color: #fff;
     text-align: center;
 }
