--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@ h1{
 }
 
 .button:hover{
-    background-color: #FEFEE2;
+    background-color: #004966;
     color: #f2f2f2;
     cursor: pointer;
 }
@@ -50,7 +50,7 @@ h1{
 .menu {
     padding-top:15px;
     height: 40px;
-    background: #FEFEE2;
+    background: #004966;
     color: #fff;
     text-align: center;
     width: 100%;
@@ -62,7 +62,7 @@ h1{
 }
 
 .menu a {
-    background: #FEFEE2;
+    background: #004966;
     color: #fff;
     display: inline;
     margin-left: 40px;
@@ -80,7 +80,7 @@ h1{
 #home{
     height: 100vh;
     width: 100%;
-    background-color: #FEFEE2;
+    background-color: #004966;
     color: #fff;
     text-align: center;
 }
