--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ ul{
 }
 
 a{
-    color: #f2f2f2;
+    color: #004966;
     text-decoration: none;
 }
 
@@ -29,7 +29,7 @@ h1{
     font-size: 2em;
     text-decoration: none;
     color: #f2f2f2;
-    border: #f2f2f2 1px solid;
+    border: #004966 1px solid;
     padding: 10px 20px;
     border-radius: 50px;
     transition: 0.15s ease-in-out;
