--- a/main.css
+++ b/main.css
@@ -28,8 +28,8 @@ h1{
 .button{
     font-size: 2em;
     text-decoration: none;
-    color: #f2f2f2;
-    border: #004966 1px solid;
+    color: #004966;
+    border: #f2f2f2 1px solid;
     padding: 10px 20px;
     border-radius: 50px;
     transition: 0.15s ease-in-out;
@@ -37,8 +37,8 @@ h1{
 }
 
 .button:hover{
-    background-color: #004966;
-    color: #f2f2f2;
+    background-color: #f2f2f2;
+    color: #004966;
     cursor: pointer;
 }
 /* nav */
