--- a/main.css
+++ b/main.css
@@ -37,8 +37,8 @@ h1{
 }
 
 .button:hover{
-    background-color: #f2f2f2;
-    color: #004966;
+    background-color: #004966;
+    color: #f2f2f2 ;
     cursor: pointer;
 }
 /* nav */
