--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ h1{
 .button{
     font-size: 2em;
     text-decoration: none;
-    color: #f2f2f2 ;
+    color: #004966 ;
     border: #004966 1px solid;
     padding: 10px 20px;
     border-radius: 50px;
