--- a/main.css
+++ b/main.css
@@ -161,7 +161,7 @@ h1{
 }
 
 .grid{
-    padding: .5rem;
+    padding: 0;
     display: flex;
     flex-direction: column;
 }
@@ -170,7 +170,7 @@ h1{
 
 .text-experience img{
     height: 200px;
-    padding: 0 0px 50px 20px;
+    padding: 0 50px 50px 20px;
     width: 20%;
     
 }
