--- a/main.css
+++ b/main.css
@@ -258,9 +258,9 @@ p4:before {
 }
 
 .text-projects img{
-    height: 150px;
+    height: 200px;
     padding: 0 50px 50px 20px;
-    width: 15%;
+    width: 15 px;
     opacity: 0.9;
     
 }
