--- a/main.css
+++ b/main.css
@@ -260,7 +260,7 @@ p4:before {
 .text-projects img{
     height: 80px;
     padding: 0 50px 50px 20px;
-    width: 20 px;
+    width: 15%;
     opacity: 0.9;
     
 }
